day3/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  volumes:
    - name: configmap-vol
      configMap:
        name: configuration
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done"]
      volumeMounts:
        - name: configmap-vol
          mountPath: /etc/config
