day3/liveness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: break
    image: busybox
    command: ["sh", "-c", 'touch /tmp/ok; sleep 60; rm /tmp/ok; sleep 1d']
    volumeMounts:
    - name: vol1
      mountPath: /tmp
  - name: fix
    image: busybox
    command: ["sh", "-c", 'sleep 120; touch /tmp/ok; sleep 1d']
    volumeMounts:
    - name: vol1
      mountPath: /tmp
  - name: my-app
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: vol1
      mountPath: /tmp
    readinessProbe:
      httpGet:
        path: /
        port: 80
      successThreshold: 3
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/ok
      initialDelaySeconds: 5
      periodSeconds: 5
  volumes:
  - name: vol1
    emptyDir: {}
