day3/readiness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod
spec:
  containers:
  - name: my-app
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: vol1
      mountPath: /tmp
    readinessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - /tmp/check-script.sh
      initialDelaySeconds: 20
      periodSeconds: 15
  volumes:
  - name: vol1
    emptyDir: {}
