day3/readiness-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod2
spec:
  containers:
  - name: my-app
    image: nginx
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      successThreshold: 3
  volumes:
  - name: vol1
    emptyDir: {}
