day3/test-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-dns
  labels:
    app: db
spec:
  containers:
    - name: busybox
      image: 'radial/busyboxplus:curl'
      command: [ 'sh', '-c', 'while true; do sleep 3600; done']
