day3/with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/country
            operator: In
            values:
            - poland
            - france
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: kubernetes.io/disks
            operator: In
            values:
            - ssd
  containers:
  - name: with-node-affinity
    image: registry.k8s.io/pause:2.0
