day3/test-dns-svc.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: test-dns-svc
spec: 
  type: ClusterIP 
  selector: 
    app: db
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
