day3/test-volume-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-volume-svc
spec:
  selector:
    app: test-volume-nginx
  type: NodePort
  ports:
  - port: 80
